# indexify-python-client

./: .gitignore  README.md  config.yaml  pyproject.toml
.github/workflows/: publish_indexify_to_pypi.yaml  test.yaml
dspy/: README.md  pyproject.toml
dspy/indexify_dspy/: __init__.py  retriever.py  tests.py
examples/: benchmark.py  generating_sql_demo.py  langchain_rag.py  mtls_example.py  openai_rag.py  question_answer_demo.py  rag.ipynb
examples/openai-rag/: Readme.md  graph.yaml  query.py  requirements.txt  setup.py
indexify/: __init__.py  client.py  data_containers.py  error.py  extraction_policy.py  extractor.py  extractor_binding.py  index.py  settings.py  utils.py
langchain/: README.md  pyproject.toml
langchain/examples/: langchain_example.py
langchain/indexify_langchain/: __init__.py  retriever.py
tests/: docker-compose.runner.yaml  docker-compose.yaml  integration_test.py  run_tests.sh
tests/files/: steph_curry_wikipedia.html
