[tool.poetry]
name = "indexify-langchain"
version = "0.0.11"
description = ""
authors = ["Lucas Jackson <lucas@tensorlake.ai>", "Diptanu Choudhury <diptanuc@gmail.com>"]
readme = "README.md"
packages = [{include = "indexify_langchain"}]

[tool.poetry.dependencies]
python = "^3.10.0"
indexify= "^0"
langchain= "^0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
